--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
-<doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-  <a href="http://ihnbc.com">ihnbc</a>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <title>IHNBC WEBAPP</title>
+    </head>
+    <body>
+        <div class="app">
+            <h1>IHNBC</h1>
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+        </div>
+		<a href="http://ihnbc.com">ihnbc</a>
+        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
+    </body>
 </html>
+
