--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         <div class="app">
             <h1>IHNBC</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Connecting...</p>
+                <p class="event received">App is Ready</p>
+				<p>
+						<a href="http://ihnbc.com">Visit IHNBC Online</a>
+				</p>
             </div>
         </div>
-		<a href="http://ihnbc.com">ihnbc</a>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
